[package]
name = "rs_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
chrono-tz = "0.8.2"
lazy_static = "1.4.0"
serde = "1.0.164"
serde_json = "1.0.99"
serenity = { version = "0.11.5", features = ["client", "gateway", "rustls_backend", "model"], default-features = false }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
